test/compile_errors/err_vec_type_mismatch.w
//! expect-error: in call to 'Vec.push'
fn main:
    let v: Vec[i32] = Vec.new()
    v.push("hello")
